--- a/css/grid.css
+++ b/css/grid.css
@@ -100,11 +100,8 @@
 }
 
 .main-content {
-<<<<<<< HEAD
-  padding: 2rem;
-=======
->>>>>>> a77d7c3ce7faf656a2a343bd477a7e392c7808ca
   padding-top: 12em;
+  padding-left: 1em;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
