--- a/css/grid.css
+++ b/css/grid.css
@@ -144,7 +144,7 @@
   padding-bottom: 2.5rem;
 }
 
-.content-item {
+.news-container {
   padding: .5rem 4rem;
   flex: 60%;
 }
@@ -173,7 +173,7 @@
   .item {
     flex: 100%;
   }
-  .content-item {
+  .news-container {
     padding: .5rem .5rem;
   }
 }
