--- a/css/grid.css
+++ b/css/grid.css
@@ -102,6 +102,7 @@
 .main-content {
   padding-top: 12em;
   padding-left: 1em;
+  padding-right: 1em;
   display: flex;
   flex-wrap: wrap;
 
@@ -113,7 +114,7 @@
 
 .browse-filter {
   padding: 1rem;
-  
+
   flex: 1 1 20%;
   height: 30rem;
 }
