--- a/css/grid.css
+++ b/css/grid.css
@@ -137,6 +137,9 @@
 
 .cart-item {
   height: 10rem;
+  display: flex;
+  flex-wrap: wrap;
+  padding: .5rem .5rem;
 }
 
 .about-contact, .about-addresses, .about-faq, .news-updates, .news-events {
@@ -164,6 +167,14 @@
   width: 60%;
   padding: .25rem 1.5rem;
   height: 10rem;
+}
+
+.image {
+  flex: 1 1 40%;
+}
+
+.detail {
+  flex: 1 1 60%;
 }
 
 @media (max-width: 78em) {
