--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ a, a:visited{
 }
 .item > img{
   width:40%;
-  
+
 }
 .item > p{
   margin: 0.1em;
@@ -76,6 +76,7 @@ a, a:visited{
   font-weight: bolder;
 }
 .card{
+  margin:2em 25em;
   padding: 0.5em 1.2em 1.2em;
   box-shadow: 0.5em 0.5em 1em -0.4em;
   background-color: white;
@@ -83,6 +84,7 @@ a, a:visited{
   position:relative;
   z-index: -1;
   margin-bottom: 1.5em;
+
 
 }
 
@@ -117,16 +119,20 @@ a, a:visited{
 .card >img{
 
   float:left;
-  padding-right: 1em;
-  width: 10%;
 
+  width: 25%;
+  border-radius: 1em;
+  margin-right: 1em;
 }
 
 .card > *{
   margin-top:2em;
+
 }
 
 .card > p{
+  overflow: hidden;
+  max-width:50em;
   margin-top: 0;
 }
 
@@ -145,7 +151,7 @@ a, a:visited{
 
 
 .club > img{
-  height:80%;
+  height:5rem;
   display: block;
   margin:0 auto;
 
