--- a/css/grid.css
+++ b/css/grid.css
@@ -160,8 +160,11 @@
   height: 10rem;
   padding-bottom: 1em;
   padding-top: 1em;
+  margin-right: 0.5em;
   margin-bottom: 1em;
-  flex:10%;
+  max-width:9.5%;
+  flex:9.5%;
+
 }
 
 .item {
@@ -182,13 +185,15 @@
 }
 
 .about-contact, .about-addresses, .about-faq,
-.news-updates, .news-events,
+.news-events,
 .profile-info, .profile-order,
 .profile-security, .profile-notification,
 .profile-billing {
   flex: 100%;
   padding: 2rem 4rem;
 }
+
+
 
 .profile-info {
   height: 20rem;
@@ -241,7 +246,8 @@
 
 .card{
   flex: 1 1 100%;
-  
+
+
 }
 
 
