--- a/css/grid.css
+++ b/css/grid.css
@@ -154,16 +154,21 @@
   display: flex;
   flex-wrap: wrap;
   flex: 100%;
+  overflow: hidden;
+  justify-content: center;
 }
 
 .club {
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   height: 10rem;
+  max-height:10rem;
   padding-bottom: 1em;
   padding-top: 1em;
   margin-right: 0.5em;
   margin-bottom: 1em;
-  max-width:9.5%;
-  flex:9.5%;
+  max-width:9%;
+  flex:9%;
 
 }
 
@@ -172,16 +177,54 @@
   flex: 25%;
 }
 
-.cart {
-  width: 60%;
-  padding: .25rem 1.5rem;
+.cart-container{
+
 }
 
+.cart {
+  display:flex;
+  flex-flow:row nowrap;
+  flex:100%;
+  margin-top: 3em;
+
+
+
+
+}
+
+.cart-box{
+  margin-top:1em;
+
+}
+
+.cart-card-left{
+  display:flex;
+  flex-flow: column wrap;
+  margin-right: 8em;
+  flex:60%;
+  padding: 1em 6em;
+  padding-top:2em;
+  padding-right: 1em;
+
+
+
+
+
+
+}
+
+.cart-info-right{
+  flex:30%;
+  align-self: flex-start;
+
+
+
+}
+
+
+
 .cart-item {
-  height: 10rem;
-  display: flex;
-  flex-wrap: wrap;
-  padding: .5rem .5rem;
+
 }
 
 .about-contact, .about-addresses, .about-faq,
@@ -244,8 +287,12 @@
   flex: 1 1 60%;
 }
 
+
+
 .card{
   flex: 1 1 100%;
+  align-self: center;
+
 
 
 }
@@ -284,8 +331,8 @@
     flex: 100%;
   }
   .cart {
-    width: 100%;
-    padding: .25rem 1rem;
+
+    flex-flow: row wrap;
   }
   .news-container {
     padding: .5rem .5rem;
