--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ header{
   position: fixed;
   width:100%;
   font-family: 'Open Sans', sans-serif;
+  z-index:999;
 
 
 }
@@ -33,9 +34,10 @@ a, a:visited{
 }
 
 .header-row-1 img{
-  left: 0;
+
   width:auto;
-  height:280%;
+  height:200%;
+  max-height: 200%
 }
 
 .nav-row-1 img{
@@ -151,26 +153,89 @@ a, a:visited{
 
 
 .club > img{
-  height:5rem;
+  max-height:5rem;
+  width:auto;
   display: block;
   margin:0 auto;
 
 }
 
 .club > p{
-
+  padding-top: 0.8em;
   font-size: 0.85rem;
   text-align: center;
 }
 
+.cart-item{
+    padding: 0.5em 1.2em 1.2em;
+    box-shadow: 0.5em 0.5em 1em -0.4em;
+    background-color: white;
+    overflow:auto;
+    z-index: 1;
+    margin-bottom: 1.5em;
+    max-width: 100%;
+    width:90%;
 
-.cart {
-  background-color: rgb(200, 200, 200);
+
 }
 
-.cart-item {
-	background-color: rgb(245, 245, 245);
+
+.cart-item >img{
+
+  float:left;
+
+  width: 20%;
+  height:auto;
+  border-radius: 1em;
+  margin-right: 1em;
 }
+
+.cart-item > p{
+  overflow: hidden;
+  max-width:50em;
+  margin-top: 1em;
+}
+
+.cart-card-left{
+  overflow: auto;
+}
+
+.cart-info-right{
+  margin-top: 2em;
+}
+
+.cart-info-box{
+
+  padding: 0.5em 1.2em 1.2em;
+  box-shadow: 0.5em 0.5em 1em -0.4em;
+  background-color: white;
+  overflow:auto;
+  z-index: 1;
+  margin: 1em 1.5em;
+  margin-bottom: 1.5em;
+  max-width: 100%;
+  width:90%;
+
+}
+.order-section{
+  border-bottom: 0.1em solid black;
+  margin-top: 1em;
+  padding-bottom: 1em;
+}
+.order-section > h3{
+  margin-top: 0.1em;
+  margin-bottom:0;
+}
+
+.checkout-section{
+  margin-top: 2em;
+  text-align: center;
+}
+
+
+
+
+
 
 .about-addresses, .about-faq,
 .news-events,
@@ -227,4 +292,12 @@ ul{
 
 .catalog-img {
 	background-color: rgb(200, 200, 200);
+}
+
+.club{
+  background-color: #F8EFE4;
+}
+
+#title{
+  text-align: center;
 }
