updated grid in detailed product, give some  flexibility to cart and new

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,17 +77,14 @@ a, a:visited{
   font-size: 1.2em;
   font-weight: bolder;
 }
+
 .card{
-  margin:2em 25em;
-  padding: 0.5em 1.2em 1.2em;
+
   box-shadow: 0.5em 0.5em 1em -0.4em;
   background-color: white;
   overflow:auto;
   position:relative;
   z-index: -1;
-  margin-bottom: 1.5em;
-
-
 }
 
 .card > h3{
@@ -174,7 +171,7 @@ a, a:visited{
     z-index: 1;
     margin-bottom: 1.5em;
     max-width: 100%;
-    width:90%;
+    width:96order-section%;
 
 
 }
@@ -201,18 +198,17 @@ a, a:visited{
 }
 
 .cart-info-right{
-  margin-top: 2em;
+  
 }
 
 .cart-info-box{
-
+  margin: 1em 1.5em;
+  margin-bottom: 1.5em;
   padding: 0.5em 1.2em 1.2em;
   box-shadow: 0.5em 0.5em 1em -0.4em;
   background-color: white;
   overflow:auto;
   z-index: 1;
-  margin: 1em 1.5em;
-  margin-bottom: 1.5em;
   max-width: 100%;
   width:90%;
 
@@ -266,12 +262,40 @@ ul{
   margin-top: 0.5em;
 }
 
+.product-left {
+    padding: 0.5em 1.2em 1.2em;
+    box-shadow: 0.5em 0.5em 1em -0.4em;
+    background-color: white;
+    overflow:auto;
+    z-index: 1;
+    height: 45rem;
+    margin-bottom: 1.5em;
+    max-width: 100%;
+    width:90%;
+}
+
+.product-right {
+	padding: 0.5em 1.2em 1.2em;
+    box-shadow: 0.5em 0.5em 1em -0.4em;
+    background-color: white;
+    overflow:auto;
+    z-index: 1;
+    height: 45rem;
+    margin-bottom: 1.5em;
+    max-width: 100%;
+    width:90%;
+}
+
 .product-img {
 	background-color: rgb(200, 200, 200);
 }
 
 .product-info {
 	background-color: rgb(150, 150, 150);
+}
+
+.product-review {
+	background-color: rgb(180, 180, 180);
 }
 
 .shipping {
