--- a/css/grid.css
+++ b/css/grid.css
@@ -194,31 +194,71 @@
 
 .cart-box{
   margin-top:1em;
-
 }
 
 .cart-card-left{
   display:flex;
   flex-flow: column wrap;
-  margin-right: 8em;
   flex:60%;
   padding: 1em 6em;
   padding-top:2em;
-  padding-right: 1em;
-
-
-
-
-
+  padding-right: 1.3em;
 
 }
 
 .cart-info-right{
   flex:30%;
   align-self: flex-start;
+  margin-right: 5em;
+  margin-top: 2em;
+}
 
+.cart-info-box {
 
+}
 
+.product {
+  display:flex;
+  flex-flow:row nowrap;
+  flex:100%;
+  margin-top: 3em;
+}
+
+.product-left{
+  margin-right: 1em;
+  flex:60%;
+  padding: 1em 6em;
+  padding-top:2em;
+  padding-right: 1em;
+  display:flex;
+  flex-flow: wrap;
+}
+
+.product-right{
+  margin-right: 1em;
+  flex:30%;
+  align-self: flex-start;
+  padding: 1em 6em;
+  padding-left: 1em;
+  padding-top: 2em;
+  padding-right: 1em;
+}
+
+.product-img {
+  flex: 1 1 40%;
+  height: 20rem;
+  padding: 1rem;
+}
+
+.product-info {
+  flex: 1 1 60%;
+  height: 20rem;
+  padding: 1rem;
+}
+
+.product-review {
+  height: 20rem;
+  flex: 1 1 100%;
 }
 
 
@@ -228,15 +268,13 @@
 }
 
 .about-contact, .about-addresses, .about-faq,
-.news-events,
+.news-events,  
 .profile-info, .profile-order,
 .profile-security, .profile-notification,
 .profile-billing {
   flex: 100%;
   padding: 2rem 4rem;
 }
-
-
 
 .profile-info {
   height: 20rem;
@@ -262,17 +300,7 @@
   padding-bottom: 2.5rem;
 }
 
-.product-img {
-  flex: 1 1 40%;
-  height: 20rem;
-  padding: 1rem;
-}
 
-.product-info {
-  flex: 1 1 60%;
-  height: 20rem;
-  padding: 1rem;
-}
 
 .shipping {
   width: 60%;
@@ -292,11 +320,10 @@
 .card{
   flex: 1 1 100%;
   align-self: center;
-
-
-
+  margin:2em 20em;
+  padding: 0.5em 1.2em 1.2em;
+  margin-bottom: 1.5em;
 }
-
 
 
 
@@ -304,7 +331,9 @@
   .item {
     flex: 33%;
   }
-
+  .card {
+    margin:2em 15em;
+  }
 }
 
 @media (max-width: 58em) {
@@ -323,6 +352,24 @@
   }
   .container-home {
     padding: 14rem 6rem;
+  }
+  .product-left{
+    flex:80%;
+  }
+  .product-right{
+    flex:80%;
+  }
+  .card {
+    margin:2em 5em;
+  }
+  .cart-card-left{
+    padding: 1em 2em;
+    padding-right: 1.3em;
+  }
+
+  .cart-info-right{
+    align-self: flex-start;
+    margin-right: 2em;
   }
 }
 
@@ -351,5 +398,27 @@
   }
   .container-home {
     padding: 14rem 0rem;
+  }
+  .product-img {
+    flex: 1 1 100%;
+  }
+  .product-info {
+    flex: 1 1 100%;
+  }
+  .card {
+    margin:.5em .25em;
+  }
+  .cart-card-left{
+    flex:100%;
+    padding: 1em 0;
+    padding-top:2em;
+    padding-right: .5em;
+  }
+
+  .cart-info-right{
+    flex:100%;
+    margin-right: 1em;
+    margin-top: 0;
+    padding: 1em 0;
   }
 }
