--- a/css/styles.css
+++ b/css/styles.css
@@ -45,15 +45,37 @@ a, a:visited{
   height: auto;
 }
 
-.catalog-filter {
+.nav-main-item {
+	color: rgb(248, 239, 228);
+	text-decoration: none;
+	transition: background-color 0.5s ease-out;
+}
 
-	background-color: rgb(150, 150, 150);
+.nav-main-item:active, .nav-main-item:hover, .nav-main-item:focus {
+	/*background-color: rgb(195, 202, 212);*/
+	background-color: rgb(230,136,136);
+}
+
+.button {
+	color: rgb(248, 239, 228);
+	text-decoration: none;
+	transition: background-color 0.5s ease-out;
+	background-color: rgb(95,102,112);
+	padding: 1rem;
+}
+
+.button:active, .button:hover, .button:focus {
+	background-color: rgb(230,136,136);
+}
+
+.catalog-filter {
+	background-color: rgb(190,96,96);
   border-right: 1em solid #F8EFE4;
 }
 
 .catalog-list {
 
-	background-color: rgb(150, 150, 150);
+	background-color: rgb(84, 29, 129);
 }
 
 .catalog-list > .item{
@@ -145,7 +167,7 @@ a, a:visited{
 .item:active, .item:hover, .item:focus,
 .club:active, .club:hover, .club:focus,
 .catalog:active, .catalog:hover, .catalog:focus, .card:hover {
-	background-color: rgb(205,205,205);
+	background-color: rgb(230,136,136);
 }
 
 
@@ -230,9 +252,6 @@ a, a:visited{
 
 
 
-
-
-
 .about-addresses, .about-faq,
 .news-events,
 .profile-order,
@@ -262,10 +281,11 @@ ul{
   margin-top: 0.5em;
 }
 
+
 .product-left {
     padding: 0.5em 1.2em 1.2em;
     box-shadow: 0.5em 0.5em 1em -0.4em;
-    background-color: white;
+    background-color: rgb(145, 152, 162);
     overflow:auto;
     z-index: 1;
     height: 45rem;
@@ -280,7 +300,6 @@ ul{
     background-color: white;
     overflow:auto;
     z-index: 1;
-    height: 45rem;
     margin-bottom: 1.5em;
     max-width: 100%;
     width:90%;
@@ -291,7 +310,7 @@ ul{
 }
 
 .product-info {
-	background-color: rgb(150, 150, 150);
+	background-color: white;
 }
 
 .product-review {
@@ -299,7 +318,7 @@ ul{
 }
 
 .shipping {
-	background-color: rgb(200, 200, 200);
+	background-color: white;
 }
 
 
