--- a/css/styles.css
+++ b/css/styles.css
@@ -45,16 +45,16 @@ a, a:visited{
   height: auto;
 }
 
-.nav-main-item {
+/* .nav-main-item {
 	color: rgb(248, 239, 228);
 	text-decoration: none;
 	transition: background-color 0.5s ease-out;
-}
+} */
 
-.nav-main-item:active, .nav-main-item:hover, .nav-main-item:focus {
-	/*background-color: rgb(195, 202, 212);*/
+/* .nav-main-item:active, .nav-main-item:hover, .nav-main-item:focus {
+	/*background-color: rgb(195, 202, 212);
 	background-color: rgb(230,136,136);
-}
+} */
 
 .button {
 	color: rgb(248, 239, 228);
@@ -193,7 +193,7 @@ a, a:visited{
     z-index: 1;
     margin-bottom: 1.5em;
     max-width: 100%;
-    width:96order-section%;
+    width:96%;
 
 
 }
@@ -220,7 +220,7 @@ a, a:visited{
 }
 
 .cart-info-right{
-  
+
 }
 
 .cart-info-box{
@@ -284,25 +284,27 @@ ul{
 
 .product-left {
     padding: 0.5em 1.2em 1.2em;
-    box-shadow: 0.5em 0.5em 1em -0.4em;
-    background-color: rgb(145, 152, 162);
-    overflow:auto;
+    box-shadow: 0 0.5em 1em -0.4em;
+    background-color: white;
     z-index: 1;
-    height: 45rem;
+    height: 100rem;
+    width:auto;
     margin-bottom: 1.5em;
-    max-width: 100%;
-    width:90%;
+
+
 }
 
 .product-right {
-	padding: 0.5em 1.2em 1.2em;
-    box-shadow: 0.5em 0.5em 1em -0.4em;
+  	padding: 0.5em 1.2em 1.2em;
+    padding-left:2em;
+    box-shadow: 0 0.5em 1em -0.4em;
     background-color: white;
     overflow:auto;
     z-index: 1;
     margin-bottom: 1.5em;
-    max-width: 100%;
-    width:90%;
+
+    width:20%;
+    max-width: 20%;
 }
 
 .product-img {
@@ -314,8 +316,38 @@ ul{
 }
 
 .product-review {
+  display:flex;
+  flex-flow:column nowrap;
+  align-items: center;
 	background-color: rgb(180, 180, 180);
+  padding-left: 1em;
 }
+
+.review-item{
+
+  margin: 1em 1.5em;
+  margin-bottom: 1.5em;
+  padding: 0.5em 1.2em 1.2em;
+  box-shadow: 0.5em 0.5em 1em -0.4em;
+  background-color: white;
+
+  z-index: 1;
+  max-width: 50%;
+  width:50%;
+}
+.review-top-info{
+  display:inline;
+}
+.review-username{
+  float:left;
+}
+.review-date{
+  float:right;
+}
+.review-description{
+  clear:both;
+}
+
 
 .shipping {
 	background-color: white;
