--- a/css/grid.css
+++ b/css/grid.css
@@ -305,7 +305,7 @@
 
 }
 
-.about-contact, .about-addresses, .about-faq,
+.about-content, .about-contact, .about-addresses, .about-faq,
 .news-events,
 .profile-info, .profile-order,
 .profile-security, .profile-notification,
@@ -363,7 +363,12 @@
   margin-bottom: 1.5em;
 }
 
-
+.about {
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ width: 50%;
+}
 
 @media (max-width: 78em) {
   .item {
@@ -371,6 +376,9 @@
   }
   .card {
     margin:2em 15em;
+  }
+  .about {
+   width: 70%;
   }
 }
 
@@ -412,6 +420,9 @@
   .shipping {
     width: 80%;
     padding: 1rem 1.5rem;
+  }
+  .about {
+   width: 100%;
   }
 }
 
