--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,8 @@ a, a:visited{
 
 }
 
+
+
 .cart-info-box{
   margin: 1em 1.5em;
   margin-bottom: 1.5em;
@@ -244,6 +246,15 @@ a, a:visited{
   margin-top: 0.1em;
   margin-bottom:0;
 }
+
+.order-list > .cart-item{
+  min-width: 50%;
+}
+
+.order-list > img{
+  min-width: 35%;
+}
+
 
 .checkout-section{
   margin-top: 2em;
@@ -422,6 +433,9 @@ ul{
   .product-info{
     flex:75%;
   }
+  .cart-card-left{
+    margin-left:2em;
+  }
 
 }
 
@@ -442,7 +456,7 @@ ul{
    width: 70%;
   }
   .order-list{
-	  margin: 1em 10em;
+	  margin: 1em 5em;
 	}
 }
 
@@ -460,8 +474,6 @@ ul{
   }
 
 }
-<<<<<<< HEAD
-=======
 @media only screen and (max-width: 58em){
 
   .product-left{
@@ -499,8 +511,11 @@ ul{
   }
 
   .cart-info-right{
-    align-self: flex-start;
-    margin-right: 2em;
+
+    align-self: center;
+    width:100%;
+    margin-left: 2em;
+    margin-right: 1em;
   }
   .shipping {
     width: 80%;
@@ -510,8 +525,12 @@ ul{
    width: 100%;
   }
   .order-list{
-	  margin: 1em 5em;
+	  margin: 1em 2em;
 	}
+  .cart{
+    flex-flow: column nowrap;
+    align-items: center;
+  }
 
 }
 
@@ -553,10 +572,13 @@ ul{
 
   .cart-info-right{
     flex:100%;
+    margin-left: 0;
     margin-right: 1em;
     margin-top: 0;
     padding: 1em 0;
   }
+
+
   .shipping {
     width: 100%;
     padding: 1rem 1.5rem;
@@ -571,7 +593,9 @@ ul{
     flex: 18%;
   }
   .order-list{
-	  margin: 0em 0;
+	  margin: 0em 0em;
 	}
+
+
+
 }
->>>>>>> 086a8cb05de4498b9f4a77f4c2f5ef9141d6c7ee
