--- a/css/grid.css
+++ b/css/grid.css
@@ -167,8 +167,8 @@
   padding-top: 1em;
   margin-right: 0.5em;
   margin-bottom: 1em;
-  max-width:9%;
-  flex:9%;
+  /*max-width:9%;*/
+  flex:8.5%;
 
 }
 
