--- a/css/grid.css
+++ b/css/grid.css
@@ -23,24 +23,19 @@
 
 .header-row-1{
   display:flex;
-  height: 2.5em;
+  height: 5em;
   flex-flow: row nowrap;
   justify-content: space-between;
-
-
-}
-.nav-row-1{
-  width:60%;
-  align-items: flex-end;
-  padding-left: 45vw;
-  padding-right: 0.5vw;
 }
 
-
-.header-row-1 .nav-main-item{
-  align-self: flex-end;
+.nav-main-logo-img{
+  margin-left: 2em;
 }
 
+.nav-row-1 {
+  margin-left: auto;
+  margin-right: 1.5em;
+}
 
 
 
@@ -52,7 +47,7 @@
   padding: 0.1em;
   padding-left: 0.5em;
   border: 0.1em solid black;
-  margin: 1.5em 0;
+  margin: 1em 0;
   background-color: white;
 }
 
@@ -95,9 +90,7 @@
   border-right: 0.1em solid white;
 }
 
-.nav-main-logo{
-  margin-left: 2em;
-}
+
 
 .nav-main-item{
   padding-right: 0.5em;
