--- a/css/styles.css
+++ b/css/styles.css
@@ -538,9 +538,6 @@ ul{
     flex-flow: column nowrap;
     align-items: center;
   }
-
-
-
 }
 
 
@@ -616,6 +613,14 @@ ul{
 	  margin: 0em 0em;
 	}
 
+	.nav-row-1 {
+		margin-left: 1rem;
+	}
+
+	.nav-main-item img{
+	  width:60%;
+	  height: auto;
+	}
 
 
 }
