--- a/css/grid.css
+++ b/css/grid.css
@@ -36,9 +36,14 @@
 .nav-row-1 {
   margin-left: auto;
   margin-right: 1.5em;
+  width: 5rem;
 }
 
-
+.nav-main-item {
+  padding-right: 0.5em;
+  width: 100%;
+  height: auto;
+}
 
 .header-row-2{
   display:flex;
@@ -93,11 +98,7 @@
 
 
 
-.nav-main-item img{
-  padding-right: 0.5em;
-  width:48%;
-  height: auto;
-}
+
 
 .main-content {
   padding-top: 12em;
