--- a/css/styles.css
+++ b/css/styles.css
@@ -665,10 +665,13 @@ ul{
 		margin-left: 1rem;
 	}
 
-	.nav-main-item img{
-	  width:60%;
-	  height: auto;
-	}
 
-
+@media(max-width: 35em){
+  .nav-row-1{
+    margin-right: 0;
+  }
+  .nav-main-item img{
+    width:40%;
+    height:auto;
+  }
 }
