--- a/css/styles.css
+++ b/css/styles.css
@@ -446,8 +446,8 @@ ul{
 }
 .profile-item{
   padding-right: 0;
-  width:50%;
-   background-color: white;
+  width:100%;
+  background-color: white;
   box-shadow: 0.5em 0.5em 1em -0.4em;
 }
 
@@ -670,6 +670,10 @@ ul{
 	}
 	.about-content{
 	  margin:2em 0;
+	}
+	.profile{
+	  display: flex;
+	  flex-flow: row wrap;
 	}
 }
 
