--- a/css/styles.css
+++ b/css/styles.css
@@ -414,7 +414,7 @@ ul{
 
 .profile-left{
   margin-left: 2em;
-  margin-right: 3em;
+  margin-right: 0;
 
 }
 .profile-detail >img{
@@ -433,7 +433,7 @@ ul{
 
 .profile-detail{
   padding: 1em;
-  margin-right: 2em;
+  margin-right: 0;
   background-color: white;
   box-shadow: 0.5em 0.5em 1em -0.4em;
 }
@@ -674,6 +674,14 @@ ul{
 	.profile{
 	  display: flex;
 	  flex-flow: row wrap;
+	}
+	.profile-right{
+	  padding-left: 0;
+	  margin-right: 0;
+	}
+	.profile-left{
+	  margin-left: 0;
+	  margin-right: 0;
 	}
 }
 
